--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: "DpComic";
+  src: url("assets/fonts/dpcomic.ttf");
+}
+
 body,
 canvas {
   margin: 0;
@@ -5,12 +10,27 @@ canvas {
   overflow: hidden;
 }
 
-button {
+.playButton, button {
   width: 100px;
   height: 40px;
   color: white;
   background-color: transparent;
   background-image: url("assets/images/buttons/button.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  border: none;
+  outline: none;
+  cursor: pointer;
+    z-index: 10;
+}
+
+.soundButton {
+  width: 50px;
+  height: 50px;
+  color: white;
+  background-color: transparent;
+  background-image: url("assets/images/buttons/volume-2.svg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
