--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,10 @@
   src: url("assets/fonts/dpcomic.ttf");
 }
 
+@font-face {
+  font-family: "DpComic";
+  src: url("assets/fonts/dpcomic.ttf");
+}
 body,
 canvas {
   margin: 0;
@@ -22,7 +26,8 @@ canvas {
   border: none;
   outline: none;
   cursor: pointer;
-    z-index: 10;
+  z-index: 10;
+  transform: translateX(-50%);
 }
 
 .soundButton {
@@ -37,4 +42,5 @@ canvas {
   border: none;
   outline: none;
   cursor: pointer;
+  transform: none;
 }
